--- a/GUI/EvaluacionesGestionar.resx
+++ b/GUI/EvaluacionesGestionar.resx
@@ -61,7 +61,7 @@
   <data name="cmdNuevaEvaluacion.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        XgAAAV4BX2xuegAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASqSURBVHhe5ZvP
+        XAAAAVwBIJKt8wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASqSURBVHhe5ZvP
         jxRFFMeHqCclYvzBgYTt6SV6MFEi/AFclAsaCMaEhGjiwas/bspGSTgYIUCidDcjbghZfhgvAneixJs/
         dqPgwQMbExLBXdwdumpdmIRp33fmjQs9D7Z3uqq7OvNNPknvdP14701Vdb+a2pptjUbqGT9SO71IfeKH
         6gxd/1IP9XQ9VHNEi6FrPY17VO60F6qPUWfD5+ppbqZa8o8ubPai+BA5doloE8mAtOuR+q0exgdHjiy8
@@ -83,6 +83,47 @@
         MmSMKCSVZmZoKn60bGJTpJBj4wSm5Z2lX7GZgb0L7tZNkZEbcQ6PDJ4i7tzlwEpB3UlsYNaP6he5+WoJ
         e+/4AYIcGaPF6hStGz/R9RUCTxL8NA9wfaVzL1An6XoMddYdiZ/kZiypVvsPmEiq+nS3caMAAAAASUVO
         RK5CYII=
+</value>
+  </data>
+  <data name="cmdAtras.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEYAAAA7CAYAAADGkvybAAAABGdBTUEAALGPC/xhBQAABLZJREFUeF7t
+        21eoHUUYwPFrTaKiUVRUxIJdxIKisTf0VQXRV4Mauwl5DWoURF9sIPbewIIiCQpqNCYaxAbJi11UYu+K
+        vf7/kAPL8kGyOzO7e/R+8IPLYc5OOVtmvp07MRmTMXaxNtbHtFX828/+V2Gnt8dxOB9X4QE8gWdX8W8/
+        uxqWsazf8bv/qVgXu+M8PIb38Qv+WUOW9Tt+12N4LI85tjEVR+MOrMTfiDrehMfwWB7TY1vH2MQ6OBhe
+        Dt8j6mAOHts6ZsA6Bx1b4jJ8jqgzJVjXpdgCg4wDsQh/IepASdb5DA7AYMJH68nwBhk1ukvv4iT0/rj3
+        2j4TXyFqaB++wEz0NjhW7KB8h6iBffoGp2EtdB5ePkM6U+o8c05Ep3EQhnBPWZ130NkN2UeyT4CoIUP0
+        FIo/yr1mnTPkmMV2xbZegqL3G2eZnyJqQE4/4w3kmih+Ai//IjEF9yGqOCdv6GfD0/8IODeJyjV1D4qs
+        0I/Ct4gqzeVr+JitzkHuRFS2KR/hRyJrOJG7DVGFudjw+sTMG/1SROXbuAVZF5zmQD5CVFkODsrpqA7K
+        ZrgLOW/0H2I3ZAsTRFFFOXh5OoOuD4qXUO4FqYN8LrKENyyzZ1FFqVxOnIXq6b0pbkepVfqjWA/JsQNK
+        zHIdFJ8+9UHxXlYydWFfzCEnx/FokqNdEw7KOagPyq0onc+xLybYk+NCRBW0ZUrS67w6KNPhE6P0oIxc
+        gOS4DtHB23BQvJHXB+Vm/InoOyVci6SwAw8hOnhTP8D3RNVXH5vgJnQ5KHoQ1R+ncfh64mlEB2/qStQH
+        5UZ0PShyxe0Sp3VsiBwzT6f6+2MUG6OvQZF9sm+tYyO8iOjgTbi6rc44d8JyRGW7YJ/sW+vYAIsRHbyJ
+        33AKqnEoTC1E5UuzT24gaB3OEBcgOnhTr2BPVOMw9DE49il59ptzVe0pXB+cw/EmovKluORIjosQHbyt
+        aHBMSL2FqHwJFyM5vDfkfnq8gD1QDZNIbyMqn5N9ORXJsTd8RxNVksLBMc9TDbOEpQfnS+yD5HDOYSei
+        SlI5n6gnjtz34vugqHwOXsr2KUtcgaiSHJagPjjHIFcSvM4ZeLbwV3StE1WUw/PYFdU4Fu8hKt/Wj3DQ
+        s4Wn3nOIKsvFSdcuqIa5IGfNUfk27EO2y2gUpiBL50ts+M4YhW8P70ZUtimfRrOQPbbGa4gqzcktraPB
+        8dd9ElG5pl7FVigSZvN/R1RxTi/DieXDcJ0VlWnCNp+BYmG2zQ3KUeVDthDmf4qGq+KPETVgiNwXfAg6
+        idn4FVFDhsQ2mk7tLMzT3IAh75OxbdcjKe/SJtym8QiiRg2BSfzN0Utsi8cRNawvnim+ht0GvYbzGzcU
+        9ZXYrvoDTgiLzVeaho/xy1FyPbU6vvadj+xT/tQwh+re3xWIGl6Kl87rOAGD/j+mHXENTAhFHcnJjZKm
+        EbbDWIS/nDs8TTp/hqhTbXmGOMH0hZ0v8ZJetfYVXl77wn22LyHlHuSGgGWYh70w1v/+Vw1v0C4n5uJ+
+        uFB0T5xbzX6Cs1T5t3vyPoCDeS/mwGl98fVO3+HpbyfdrbUffENgUkq+SvEzdz35hKnuzZuMfmNi4l9m
+        K2L3yxN7cwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="cmdEliminar.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAIQAAACEATCrHSUAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAB4klEQVRIS61WSU7DMBTNIVgwikOUOAyb4gRKy7AAcQdGsYVjsEIgTsAKUIeblNJKnKFt4tCBKPzv
+        GpSYT5s2fdJT3D88Oz/2d41h8LfNJZezC89mFY9bb/D0JOXYKru2de5nrUUVnhw+X1twbfMexPrAcAQD
+        4bCnT76+rNKHQ2yuHkBSWxNJwrbg5r6SoeE67BICAy1xHAZYUiUXh+AreQj40hImYYBVULIDYM3BMUlZ
+        /mNL5DJzSt4wwPCoBaQmbhIpjlsRDGRp/JursFN+CcVR7o8PbejDGN2n2MfK/HxYKkAK9Hq9sNuoxSbB
+        MdrQ1yk9x3KihLc4g/JYZcqJFIcgVB8IdT8aoTguELY8matYxPrXNWOM0dXiMzqmSqexZgibuYQjxuiq
+        E65cErXxDUZuT3qCAhmrsYUTvGvGGFOWqDrmR86TH57KVSwa2HIJh2Sn8kquNvpWuJWjOVEKzk4M7Ofw
+        g2zL8qDBPqdKgTZ50K5HHDSEy60HIiAV4QDfSXGE2NqYB+M0m13Ty5qzSn4AzzZ3wDGddm2zPSUbh7p/
+        0104sGmUHA2cHQJbWmISNuFu3lUyw9HOZmbgfNxCUpJLv4+9P3bBJIX8d+GYp57DSiBUxd6ielcVWETf
+        71YkYRjfaFm0vBhkqFMAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
