--- a/GUI/ActividadesGestionar.resx
+++ b/GUI/ActividadesGestionar.resx
@@ -61,7 +61,7 @@
   <data name="cmdNuevaActividad.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        XAAAAVwBIJKt8wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASqSURBVHhe5ZvP
+        WgAAAVoBoJHpaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASqSURBVHhe5ZvP
         jxRFFMeHqCclYvzBgYTt6SV6MFEi/AFclAsaCMaEhGjiwas/bspGSTgYIUCidDcjbghZfhgvAneixJs/
         dqPgwQMbExLBXdwdumpdmIRp33fmjQs9D7Z3uqq7OvNNPknvdP14701Vdb+a2pptjUbqGT9SO71IfeKH
         6gxd/1IP9XQ9VHNEi6FrPY17VO60F6qPUWfD5+ppbqZa8o8ubPai+BA5doloE8mAtOuR+q0exgdHjiy8
@@ -113,17 +113,39 @@
   </data>
   <data name="cmdEliminar.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAIQAAACEATCrHSUAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAB4klEQVRIS61WSU7DMBTNIVgwikOUOAyb4gRKy7AAcQdGsYVjsEIgTsAKUIeblNJKnKFt4tCBKPzv
-        GpSYT5s2fdJT3D88Oz/2d41h8LfNJZezC89mFY9bb/D0JOXYKru2de5nrUUVnhw+X1twbfMexPrAcAQD
-        4bCnT76+rNKHQ2yuHkBSWxNJwrbg5r6SoeE67BICAy1xHAZYUiUXh+AreQj40hImYYBVULIDYM3BMUlZ
-        /mNL5DJzSt4wwPCoBaQmbhIpjlsRDGRp/JursFN+CcVR7o8PbejDGN2n2MfK/HxYKkAK9Hq9sNuoxSbB
-        MdrQ1yk9x3KihLc4g/JYZcqJFIcgVB8IdT8aoTguELY8matYxPrXNWOM0dXiMzqmSqexZgibuYQjxuiq
-        E65cErXxDUZuT3qCAhmrsYUTvGvGGFOWqDrmR86TH57KVSwa2HIJh2Sn8kquNvpWuJWjOVEKzk4M7Ofw
-        g2zL8qDBPqdKgTZ50K5HHDSEy60HIiAV4QDfSXGE2NqYB+M0m13Ty5qzSn4AzzZ3wDGddm2zPSUbh7p/
-        0104sGmUHA2cHQJbWmISNuFu3lUyw9HOZmbgfNxCUpJLv4+9P3bBJIX8d+GYp57DSiBUxd6ielcVWETf
-        71YkYRjfaFm0vBhkqFMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        gwAAAIMBYu+7WgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHiSURBVEhLrVZJ
+        TsMwFM0hWDCKQ5Q4DJviBErLsABxB0axhWOwQiBOwApQh5uU0kqcoW3i0IEo/O8alJhPmzZ90lPcPzw7
+        P/Z3jWHwt80ll7MLz2YVj1tv8PQk5dgqu7Z17metRRWeHD5fW3Bt8x7E+sBwBAPhsKdPvr6s0odDbK4e
+        QFJbE0nCtuDmvpKh4TrsEgIDLXEcBlhSJReH4Ct5CPjSEiZhgFVQsgNgzcExSVn+Y0vkMnNK3jDA8KgF
+        pCZuEimOWxEMZGn8m6uwU34JxVHujw9t6MMY3afYx8r8fFgqQAr0er2w26jFJsEx2tDXKT3HcqKEtziD
+        8lhlyokUhyBUHwh1PxqhOC4QtjyZq1jE+tc1Y4zR1eIzOqZKp7FmCJu5hCPG6KoTrlwStfENRm5PeoIC
+        GauxhRO8a8YYU5aoOuZHzpMfnspVLBrYcgmHZKfySq42+la4laM5UQrOTgzs5/CDbMvyoME+p0qBNnnQ
+        rkccNITLrQciIBXhAN9JcYTY2pgH4zSbXdPLmrNKfgDPNnfAMZ12bbM9JRuHun/TXTiwaZQcDZwdAlta
+        YhI24W7eVTLD0c5mZuB83EJSkku/j70/dsEkhfx34ZinnsNKIFTF3qJ6VxVYRN/vViRhGN9oWbS8GGSo
+        UwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="cmdUpdate.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADm0lEQVRYR81XS08TURQen4kuXcuf0AX+BDWyUYqPiI+FRIs8CkQw2FLjUuNGEVQ0UYkCamJSoyDh
+        tSEmugBUWhN37mqCRuzUMu0czzfcGe7c3paCRPySL9O503u+M+eec+ZeY7WIJMxpJgX7iepe2KYYXnu0
+        fzHLwnGzxSDaIIaMANEmFjddB4IDNgU+0Vbx2OD/bgwNZWMNowvlYmTlCH2lbZHP6Q4WSUGoI566LB4Z
+        4YRZhTHPAWZo2LouHhtNg9YExmrZsdBgdiw0STvEo9IRiacqXBGJ4+FE+jVfc+6Y60BwgKjhZS5ZF8v9
+        8MYEm4etK8Js6ah5T1tYIOkKFaIqpvL8M8rVxGi7MLsysMC4KqhSJyqzPmbPCXPF4aw5hx1vjvtwPLWb
+        BRZUQZU6UR95aVpGs8dgE5HAcmhzQiQcjCY5ycb4WlA8PGtS27sMtU5mqPoB0alHRGf7NOIu2Yn6WO47
+        lgP3SEwhuwiUGht2sr0Y22fSxOVlscGsa3xv5yL3MSt7iM48VsQ1RHX4ShR1rhOU2fo2wxPJUo25DniO
+        3CI68dD/Hx3RJ4Q8g5sM6lwnDEKcJ9mqEVB1wGUxJxqHrHE0K6G+hEjcnFDFEXZ+cy/kgvPBPrpxrp+O
+        V96jrkN3aGZ/F9myA4hEjWY5kAtCLh+RRHpQdcBZc8kAi07VPaedYoqHI/epvKKb0rIT7JxPHGQHvokp
+        S4hyOER79TociGyXE475UyfuAk7IkUBi5lUHV0TziHUtOkabnUksNMVMy8IuL3Kp+SZz2J1JRXDwLn2Q
+        o3C6V5ovsfapvfgV1Qm7vMB1Lk/CmgudgqjqoW7ZAfQJ2YbK/8KBkpegtp9uCp2C4CX4KDuALinb8Gy5
+        SwAgCVkwwMxLQqUE54NPqMyZpMHhXtqD8nPF8VuXhE3D1lUvCWXoyrBJKUM2MK1zAuIHbvvLMMCt2TeX
+        iT2DmJIPXSO6NJ1WSxH8xezk6FRjzRF2+c1B3Ou+C/pGVEor7rPzjIGyqMyTRVoxtmy+VlzKx6gNTgzY
+        aiTyhNF8lst80PcxWtHn+E3WkhPTE+aQY81X9TkG5A0Jc5RZeDfkbEh+O32imkONbrf8hsSeK7ghAdQt
+        WXQ2tYvF/npLxtGixpHMUdgsuiXTgQX+3aZUxbpvywscTDg30q/4qj2YcI0nUeeyA+CqDibq0YwdiopH
+        RjRhVqoOoL2Kx2tzNHOxbofT5cDia3A8N4w/52lbto7ZpN8AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
