--- a/GUI/Pizarron/PizzarronForm.resx
+++ b/GUI/Pizarron/PizzarronForm.resx
@@ -57,14 +57,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="bmenus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="bherramientas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>132, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="tsLapiz.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="tsLapiz.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAwAAAAMACAYAAACTgQCOAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAADsuSURBVHhe7d15tO1pXd/5ooqhBASKQmVUFEFBNOmVaIfG
@@ -323,7 +317,7 @@
         A024XVAAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="tsBorrador.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="tsBorrador.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABuzSURBVHhe7d15tHV3Xd/xG5IQxgjKTGqRqQwCgSBqEbpQ
@@ -447,7 +441,33 @@
         kiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkiRJkqRFtbPz/wBTc+TNdXtC8wAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="cmdAtras.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEYAAAA7CAYAAADGkvybAAAABGdBTUEAALGPC/xhBQAABLZJREFUeF7t
+        21eoHUUYwPFrTaKiUVRUxIJdxIKisTf0VQXRV4Mauwl5DWoURF9sIPbewIIiCQpqNCYaxAbJi11UYu+K
+        vf7/kAPL8kGyOzO7e/R+8IPLYc5OOVtmvp07MRmTMXaxNtbHtFX828/+V2Gnt8dxOB9X4QE8gWdX8W8/
+        uxqWsazf8bv/qVgXu+M8PIb38Qv+WUOW9Tt+12N4LI85tjEVR+MOrMTfiDrehMfwWB7TY1vH2MQ6OBhe
+        Dt8j6mAOHts6ZsA6Bx1b4jJ8jqgzJVjXpdgCg4wDsQh/IepASdb5DA7AYMJH68nwBhk1ukvv4iT0/rj3
+        2j4TXyFqaB++wEz0NjhW7KB8h6iBffoGp2EtdB5ePkM6U+o8c05Ep3EQhnBPWZ130NkN2UeyT4CoIUP0
+        FIo/yr1mnTPkmMV2xbZegqL3G2eZnyJqQE4/4w3kmih+Ai//IjEF9yGqOCdv6GfD0/8IODeJyjV1D4qs
+        0I/Ct4gqzeVr+JitzkHuRFS2KR/hRyJrOJG7DVGFudjw+sTMG/1SROXbuAVZF5zmQD5CVFkODsrpqA7K
+        ZrgLOW/0H2I3ZAsTRFFFOXh5OoOuD4qXUO4FqYN8LrKENyyzZ1FFqVxOnIXq6b0pbkepVfqjWA/JsQNK
+        zHIdFJ8+9UHxXlYydWFfzCEnx/FokqNdEw7KOagPyq0onc+xLybYk+NCRBW0ZUrS67w6KNPhE6P0oIxc
+        gOS4DtHB23BQvJHXB+Vm/InoOyVci6SwAw8hOnhTP8D3RNVXH5vgJnQ5KHoQ1R+ncfh64mlEB2/qStQH
+        5UZ0PShyxe0Sp3VsiBwzT6f6+2MUG6OvQZF9sm+tYyO8iOjgTbi6rc44d8JyRGW7YJ/sW+vYAIsRHbyJ
+        33AKqnEoTC1E5UuzT24gaB3OEBcgOnhTr2BPVOMw9DE49il59ptzVe0pXB+cw/EmovKluORIjosQHbyt
+        aHBMSL2FqHwJFyM5vDfkfnq8gD1QDZNIbyMqn5N9ORXJsTd8RxNVksLBMc9TDbOEpQfnS+yD5HDOYSei
+        SlI5n6gnjtz34vugqHwOXsr2KUtcgaiSHJagPjjHIFcSvM4ZeLbwV3StE1WUw/PYFdU4Fu8hKt/Wj3DQ
+        s4Wn3nOIKsvFSdcuqIa5IGfNUfk27EO2y2gUpiBL50ts+M4YhW8P70ZUtimfRrOQPbbGa4gqzcktraPB
+        8dd9ElG5pl7FVigSZvN/R1RxTi/DieXDcJ0VlWnCNp+BYmG2zQ3KUeVDthDmf4qGq+KPETVgiNwXfAg6
+        idn4FVFDhsQ2mk7tLMzT3IAh75OxbdcjKe/SJtym8QiiRg2BSfzN0Utsi8cRNawvnim+ht0GvYbzGzcU
+        9ZXYrvoDTgiLzVeaho/xy1FyPbU6vvadj+xT/tQwh+re3xWIGl6Kl87rOAGD/j+mHXENTAhFHcnJjZKm
+        EbbDWIS/nDs8TTp/hqhTbXmGOMH0hZ0v8ZJetfYVXl77wn22LyHlHuSGgGWYh70w1v/+Vw1v0C4n5uJ+
+        uFB0T5xbzX6Cs1T5t3vyPoCDeS/mwGl98fVO3+HpbyfdrbUffENgUkq+SvEzdz35hKnuzZuMfmNi4l9m
+        K2L3yxN7cwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
     <value>42</value>
   </metadata>
 </root>
